// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`generateModelConfig no providers available returns ULTIMATE_FALLBACK for all agents and categories when no providers 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/AndreDalwin/DrizzyAgent/dev/assets/drizzy-agent.schema.json",
  "agents": {
    "coder": {
      "model": "opencode/big-pickle",
    },
    "explore": {
      "model": "opencode/gpt-5-nano",
    },
    "librarian": {
      "model": "opencode/minimax-m2.5-free",
    },
    "multimodal-looker": {
      "model": "openai/gpt-5-nano",
    },
    "oracle": {
      "model": "opencode/big-pickle",
    },
    "orchestrator": {
      "model": "google/gemini-3.1-pro",
    },
    "planConsultant": {
      "model": "google/gemini-3.1-pro",
    },
    "planReviewer": {
      "model": "opencode/big-pickle",
    },
    "planner": {
      "model": "google/gemini-3.1-pro",
    },
    "researcher": {
      "model": "opencode/glm-4.7-free",
    },
    "researcher-junior": {
      "model": "opencode/glm-4.7-free",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/minimax-m2.5-free",
    },
    "deep": {
      "model": "opencode/big-pickle",
    },
    "quick": {
      "model": "opencode/gpt-5-nano",
    },
    "ultrabrain": {
      "model": "opencode/big-pickle",
    },
    "unspecified-high": {
      "model": "opencode/minimax-m2.5-free",
    },
    "unspecified-low": {
      "model": "opencode/minimax-m2.5-free",
    },
    "visual-engineering": {
      "model": "kimi-for-coding/k2p5",
    },
    "writing": {
      "model": "anthropic/claude-sonnet-4-6",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses Claude models when only Claude is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/AndreDalwin/DrizzyAgent/dev/assets/drizzy-agent.schema.json",
  "agents": {
    "coder": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "explore": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "librarian": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "multimodal-looker": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "oracle": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "orchestrator": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "planConsultant": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "planReviewer": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "planner": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "researcher": {
      "model": "anthropic/claude-sonnet-4-6",
      "variant": "medium",
    },
    "researcher-junior": {
      "model": "anthropic/claude-sonnet-4-6",
      "variant": "medium",
    },
  },
  "categories": {
    "artistry": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "deep": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "unspecified-high": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "visual-engineering": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "writing": {
      "model": "anthropic/claude-sonnet-4-6",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses Claude models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/AndreDalwin/DrizzyAgent/dev/assets/drizzy-agent.schema.json",
  "agents": {
    "coder": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "explore": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "librarian": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "multimodal-looker": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "oracle": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "orchestrator": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "planConsultant": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "planReviewer": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "planner": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "researcher": {
      "model": "anthropic/claude-sonnet-4-6",
      "variant": "medium",
    },
    "researcher-junior": {
      "model": "anthropic/claude-sonnet-4-6",
      "variant": "medium",
    },
  },
  "categories": {
    "artistry": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "deep": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "unspecified-high": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "visual-engineering": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "writing": {
      "model": "anthropic/claude-sonnet-4-6",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses OpenAI models when only OpenAI is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/AndreDalwin/DrizzyAgent/dev/assets/drizzy-agent.schema.json",
  "agents": {
    "coder": {
      "model": "openai/gpt-5.4",
      "variant": "medium",
    },
    "explore": {
      "model": "openai/gpt-5.4-nano",
      "variant": "low",
    },
    "gptcoder": {
      "model": "openai/gpt-5.4",
      "variant": "medium",
    },
    "librarian": {
      "model": "openai/gpt-5.4-mini",
      "variant": "low",
    },
    "multimodal-looker": {
      "model": "openai/gpt-5.4",
      "variant": "medium",
    },
    "oracle": {
      "model": "openai/gpt-5.4",
      "variant": "high",
    },
    "orchestrator": {
      "model": "openai/gpt-5.4",
      "variant": "medium",
    },
    "planConsultant": {
      "model": "openai/gpt-5.4",
      "variant": "high",
    },
    "planReviewer": {
      "model": "openai/gpt-5.4",
      "variant": "xhigh",
    },
    "planner": {
      "model": "openai/gpt-5.4",
      "variant": "high",
    },
    "researcher": {
      "model": "openai/gpt-5.4",
      "variant": "medium",
    },
    "researcher-junior": {
      "model": "openai/gpt-5.4-mini",
      "variant": "low",
    },
  },
  "categories": {
    "artistry": {
      "model": "openai/gpt-5.4",
      "variant": "xhigh",
    },
    "deep": {
      "model": "openai/gpt-5.4",
      "variant": "medium",
    },
    "quick": {
      "model": "openai/gpt-5.4-mini",
      "variant": "low",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.4",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "unspecified-low": {
      "model": "openai/gpt-5.4-mini",
      "variant": "medium",
    },
    "visual-engineering": {
      "model": "openai/gpt-5.4",
      "variant": "high",
    },
    "writing": {
      "model": "openai/gpt-5.4",
      "variant": "medium",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses OpenAI models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/AndreDalwin/DrizzyAgent/dev/assets/drizzy-agent.schema.json",
  "agents": {
    "coder": {
      "model": "openai/gpt-5.4",
      "variant": "medium",
    },
    "explore": {
      "model": "openai/gpt-5.4-nano",
      "variant": "low",
    },
    "gptcoder": {
      "model": "openai/gpt-5.4",
      "variant": "medium",
    },
    "librarian": {
      "model": "openai/gpt-5.4-mini",
      "variant": "low",
    },
    "multimodal-looker": {
      "model": "openai/gpt-5.4",
      "variant": "medium",
    },
    "oracle": {
      "model": "openai/gpt-5.4",
      "variant": "high",
    },
    "orchestrator": {
      "model": "openai/gpt-5.4",
      "variant": "medium",
    },
    "planConsultant": {
      "model": "openai/gpt-5.4",
      "variant": "high",
    },
    "planReviewer": {
      "model": "openai/gpt-5.4",
      "variant": "xhigh",
    },
    "planner": {
      "model": "openai/gpt-5.4",
      "variant": "high",
    },
    "researcher": {
      "model": "openai/gpt-5.4",
      "variant": "medium",
    },
    "researcher-junior": {
      "model": "openai/gpt-5.4-mini",
      "variant": "low",
    },
  },
  "categories": {
    "artistry": {
      "model": "openai/gpt-5.4",
      "variant": "xhigh",
    },
    "deep": {
      "model": "openai/gpt-5.4",
      "variant": "medium",
    },
    "quick": {
      "model": "openai/gpt-5.4-mini",
      "variant": "low",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.4",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "openai/gpt-5.3-codex",
      "variant": "high",
    },
    "unspecified-low": {
      "model": "openai/gpt-5.4-mini",
      "variant": "medium",
    },
    "visual-engineering": {
      "model": "openai/gpt-5.4",
      "variant": "high",
    },
    "writing": {
      "model": "openai/gpt-5.4",
      "variant": "medium",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses Gemini models when only Gemini is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/AndreDalwin/DrizzyAgent/dev/assets/drizzy-agent.schema.json",
  "agents": {
    "coder": {
      "model": "google/gemini-3.1-pro-preview",
    },
    "explore": {
      "model": "google/gemini-3-flash-preview",
    },
    "librarian": {
      "model": "google/gemini-3-flash-preview",
    },
    "multimodal-looker": {
      "model": "google/gemini-3-flash-preview",
    },
    "oracle": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "orchestrator": {
      "model": "google/gemini-3.1-pro-preview",
    },
    "planConsultant": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "planReviewer": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "planner": {
      "model": "google/gemini-3.1-pro-preview",
    },
    "researcher": {
      "model": "google/gemini-3.1-pro-preview",
    },
    "researcher-junior": {
      "model": "google/gemini-3-flash-preview",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "deep": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "quick": {
      "model": "google/gemini-3-flash-preview",
    },
    "ultrabrain": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "unspecified-high": {
      "model": "google/gemini-3-flash-preview",
    },
    "unspecified-low": {
      "model": "google/gemini-3-flash-preview",
    },
    "visual-engineering": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "writing": {
      "model": "google/gemini-3-flash-preview",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses Gemini models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/AndreDalwin/DrizzyAgent/dev/assets/drizzy-agent.schema.json",
  "agents": {
    "coder": {
      "model": "google/gemini-3.1-pro-preview",
    },
    "explore": {
      "model": "google/gemini-3-flash-preview",
    },
    "librarian": {
      "model": "google/gemini-3-flash-preview",
    },
    "multimodal-looker": {
      "model": "google/gemini-3-flash-preview",
    },
    "oracle": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "orchestrator": {
      "model": "google/gemini-3.1-pro-preview",
    },
    "planConsultant": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "planReviewer": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "planner": {
      "model": "google/gemini-3.1-pro-preview",
    },
    "researcher": {
      "model": "google/gemini-3.1-pro-preview",
    },
    "researcher-junior": {
      "model": "google/gemini-3-flash-preview",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "deep": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "quick": {
      "model": "google/gemini-3-flash-preview",
    },
    "ultrabrain": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "unspecified-high": {
      "model": "opencode/kimi-k2.5",
    },
    "unspecified-low": {
      "model": "google/gemini-3-flash-preview",
    },
    "visual-engineering": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "writing": {
      "model": "google/gemini-3-flash-preview",
    },
  },
}
`;

exports[`generateModelConfig all native providers uses preferred models from fallback chains when all natives available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/AndreDalwin/DrizzyAgent/dev/assets/drizzy-agent.schema.json",
  "agents": {
    "coder": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "explore": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "gptcoder": {
      "model": "openai/gpt-5.4",
      "variant": "medium",
    },
    "librarian": {
      "model": "google/gemini-3-flash-preview",
    },
    "multimodal-looker": {
      "model": "openai/gpt-5.4",
      "variant": "medium",
    },
    "oracle": {
      "model": "openai/gpt-5.4",
      "variant": "high",
    },
    "orchestrator": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "planConsultant": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "planReviewer": {
      "model": "openai/gpt-5.4",
      "variant": "xhigh",
    },
    "planner": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "researcher": {
      "model": "google/gemini-3.1-pro-preview",
    },
    "researcher-junior": {
      "model": "anthropic/claude-sonnet-4-6",
      "variant": "medium",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "deep": {
      "model": "openai/gpt-5.4",
      "variant": "medium",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.4",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "visual-engineering": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "writing": {
      "model": "google/gemini-3-flash-preview",
    },
  },
}
`;

exports[`generateModelConfig all native providers uses preferred models with isMax20 flag when all natives available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/AndreDalwin/DrizzyAgent/dev/assets/drizzy-agent.schema.json",
  "agents": {
    "coder": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "explore": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "gptcoder": {
      "model": "openai/gpt-5.4",
      "variant": "medium",
    },
    "librarian": {
      "model": "google/gemini-3-flash-preview",
    },
    "multimodal-looker": {
      "model": "openai/gpt-5.4",
      "variant": "medium",
    },
    "oracle": {
      "model": "openai/gpt-5.4",
      "variant": "high",
    },
    "orchestrator": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "planConsultant": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "planReviewer": {
      "model": "openai/gpt-5.4",
      "variant": "xhigh",
    },
    "planner": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "researcher": {
      "model": "google/gemini-3.1-pro-preview",
    },
    "researcher-junior": {
      "model": "anthropic/claude-sonnet-4-6",
      "variant": "medium",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "deep": {
      "model": "openai/gpt-5.4",
      "variant": "medium",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.4",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "visual-engineering": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "writing": {
      "model": "google/gemini-3-flash-preview",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses OpenCode Zen models when only OpenCode Zen is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/AndreDalwin/DrizzyAgent/dev/assets/drizzy-agent.schema.json",
  "agents": {
    "coder": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "explore": {
      "model": "opencode/claude-haiku-4-5",
    },
    "gptcoder": {
      "model": "opencode/gpt-5.4",
      "variant": "medium",
    },
    "librarian": {
      "model": "opencode/gemini-3-flash",
    },
    "multimodal-looker": {
      "model": "opencode/gpt-5.4",
      "variant": "medium",
    },
    "oracle": {
      "model": "opencode/gpt-5.4",
      "variant": "high",
    },
    "orchestrator": {
      "model": "opencode/claude-sonnet-4-6",
    },
    "planConsultant": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "planReviewer": {
      "model": "opencode/gpt-5.4",
      "variant": "xhigh",
    },
    "planner": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "researcher": {
      "model": "opencode/gemini-3.1-pro",
    },
    "researcher-junior": {
      "model": "opencode/kimi-k2.5",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/gemini-3.1-pro",
      "variant": "high",
    },
    "deep": {
      "model": "opencode/gpt-5.4",
      "variant": "medium",
    },
    "quick": {
      "model": "opencode/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "opencode/gpt-5.4",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "opencode/claude-sonnet-4-6",
    },
    "unspecified-low": {
      "model": "opencode/claude-sonnet-4-6",
    },
    "visual-engineering": {
      "model": "opencode/gemini-3.1-pro",
      "variant": "high",
    },
    "writing": {
      "model": "opencode/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses OpenCode Zen models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/AndreDalwin/DrizzyAgent/dev/assets/drizzy-agent.schema.json",
  "agents": {
    "coder": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "explore": {
      "model": "opencode/claude-haiku-4-5",
    },
    "gptcoder": {
      "model": "opencode/gpt-5.4",
      "variant": "medium",
    },
    "librarian": {
      "model": "opencode/gemini-3-flash",
    },
    "multimodal-looker": {
      "model": "opencode/gpt-5.4",
      "variant": "medium",
    },
    "oracle": {
      "model": "opencode/gpt-5.4",
      "variant": "high",
    },
    "orchestrator": {
      "model": "opencode/claude-sonnet-4-6",
    },
    "planConsultant": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "planReviewer": {
      "model": "opencode/gpt-5.4",
      "variant": "xhigh",
    },
    "planner": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "researcher": {
      "model": "opencode/gemini-3.1-pro",
    },
    "researcher-junior": {
      "model": "opencode/kimi-k2.5",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/gemini-3.1-pro",
      "variant": "high",
    },
    "deep": {
      "model": "opencode/gpt-5.4",
      "variant": "medium",
    },
    "quick": {
      "model": "opencode/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "opencode/gpt-5.4",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "opencode/claude-sonnet-4-6",
    },
    "visual-engineering": {
      "model": "opencode/gemini-3.1-pro",
      "variant": "high",
    },
    "writing": {
      "model": "opencode/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses GitHub Copilot models when only Copilot is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/AndreDalwin/DrizzyAgent/dev/assets/drizzy-agent.schema.json",
  "agents": {
    "coder": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "explore": {
      "model": "github-copilot/gpt-5-mini",
    },
    "gptcoder": {
      "model": "github-copilot/gpt-5.4",
      "variant": "medium",
    },
    "librarian": {
      "model": "github-copilot/gemini-3-flash-preview",
    },
    "multimodal-looker": {
      "model": "github-copilot/gemini-3-flash-preview",
    },
    "oracle": {
      "model": "github-copilot/gpt-5.4",
      "variant": "high",
    },
    "orchestrator": {
      "model": "github-copilot/claude-sonnet-4.6",
    },
    "planConsultant": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "planReviewer": {
      "model": "github-copilot/gpt-5.4",
      "variant": "xhigh",
    },
    "planner": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "researcher": {
      "model": "github-copilot/gemini-3.1-pro-preview",
    },
    "researcher-junior": {
      "model": "github-copilot/claude-sonnet-4.6",
      "variant": "medium",
    },
  },
  "categories": {
    "artistry": {
      "model": "github-copilot/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "deep": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "quick": {
      "model": "github-copilot/claude-haiku-4.5",
    },
    "ultrabrain": {
      "model": "github-copilot/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "unspecified-high": {
      "model": "github-copilot/claude-sonnet-4.6",
    },
    "unspecified-low": {
      "model": "github-copilot/claude-sonnet-4.6",
    },
    "visual-engineering": {
      "model": "github-copilot/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "writing": {
      "model": "github-copilot/gemini-3-flash-preview",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses GitHub Copilot models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/AndreDalwin/DrizzyAgent/dev/assets/drizzy-agent.schema.json",
  "agents": {
    "coder": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "explore": {
      "model": "github-copilot/gpt-5-mini",
    },
    "gptcoder": {
      "model": "github-copilot/gpt-5.4",
      "variant": "medium",
    },
    "librarian": {
      "model": "github-copilot/gemini-3-flash-preview",
    },
    "multimodal-looker": {
      "model": "github-copilot/gemini-3-flash-preview",
    },
    "oracle": {
      "model": "github-copilot/gpt-5.4",
      "variant": "high",
    },
    "orchestrator": {
      "model": "github-copilot/claude-sonnet-4.6",
    },
    "planConsultant": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "planReviewer": {
      "model": "github-copilot/gpt-5.4",
      "variant": "xhigh",
    },
    "planner": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "researcher": {
      "model": "github-copilot/gemini-3.1-pro-preview",
    },
    "researcher-junior": {
      "model": "github-copilot/claude-sonnet-4.6",
      "variant": "medium",
    },
  },
  "categories": {
    "artistry": {
      "model": "github-copilot/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "deep": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "quick": {
      "model": "github-copilot/claude-haiku-4.5",
    },
    "ultrabrain": {
      "model": "github-copilot/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "unspecified-high": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "github-copilot/claude-sonnet-4.6",
    },
    "visual-engineering": {
      "model": "github-copilot/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "writing": {
      "model": "github-copilot/gemini-3-flash-preview",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses ZAI model for librarian when only ZAI is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/AndreDalwin/DrizzyAgent/dev/assets/drizzy-agent.schema.json",
  "agents": {
    "coder": {
      "model": "zai-coding-plan/glm-5",
    },
    "explore": {
      "model": "opencode/gpt-5-nano",
    },
    "librarian": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "multimodal-looker": {
      "model": "zai-coding-plan/glm-4.6v",
    },
    "oracle": {
      "model": "opencode/big-pickle",
    },
    "orchestrator": {
      "model": "google/gemini-3.1-pro",
    },
    "planConsultant": {
      "model": "google/gemini-3.1-pro",
    },
    "planReviewer": {
      "model": "opencode/big-pickle",
    },
    "planner": {
      "model": "google/gemini-3.1-pro",
    },
    "researcher": {
      "model": "opencode/glm-4.7-free",
    },
    "researcher-junior": {
      "model": "opencode/glm-4.7-free",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/minimax-m2.5-free",
    },
    "deep": {
      "model": "opencode/big-pickle",
    },
    "quick": {
      "model": "opencode/gpt-5-nano",
    },
    "ultrabrain": {
      "model": "opencode/big-pickle",
    },
    "unspecified-high": {
      "model": "opencode/minimax-m2.5-free",
    },
    "unspecified-low": {
      "model": "opencode/minimax-m2.5-free",
    },
    "visual-engineering": {
      "model": "zai-coding-plan/glm-5",
    },
    "writing": {
      "model": "anthropic/claude-sonnet-4-6",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses ZAI model for librarian with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/AndreDalwin/DrizzyAgent/dev/assets/drizzy-agent.schema.json",
  "agents": {
    "coder": {
      "model": "zai-coding-plan/glm-5",
    },
    "explore": {
      "model": "opencode/gpt-5-nano",
    },
    "librarian": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "multimodal-looker": {
      "model": "zai-coding-plan/glm-4.6v",
    },
    "oracle": {
      "model": "opencode/big-pickle",
    },
    "orchestrator": {
      "model": "google/gemini-3.1-pro",
    },
    "planConsultant": {
      "model": "google/gemini-3.1-pro",
    },
    "planReviewer": {
      "model": "opencode/big-pickle",
    },
    "planner": {
      "model": "google/gemini-3.1-pro",
    },
    "researcher": {
      "model": "opencode/glm-4.7-free",
    },
    "researcher-junior": {
      "model": "opencode/glm-4.7-free",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/minimax-m2.5-free",
    },
    "deep": {
      "model": "opencode/big-pickle",
    },
    "quick": {
      "model": "opencode/gpt-5-nano",
    },
    "ultrabrain": {
      "model": "opencode/big-pickle",
    },
    "unspecified-high": {
      "model": "zai-coding-plan/glm-5",
    },
    "unspecified-low": {
      "model": "opencode/minimax-m2.5-free",
    },
    "visual-engineering": {
      "model": "zai-coding-plan/glm-5",
    },
    "writing": {
      "model": "anthropic/claude-sonnet-4-6",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses Claude + OpenCode Zen combination 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/AndreDalwin/DrizzyAgent/dev/assets/drizzy-agent.schema.json",
  "agents": {
    "coder": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "explore": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "gptcoder": {
      "model": "opencode/gpt-5.4",
      "variant": "medium",
    },
    "librarian": {
      "model": "opencode/gemini-3-flash",
    },
    "multimodal-looker": {
      "model": "opencode/gpt-5.4",
      "variant": "medium",
    },
    "oracle": {
      "model": "opencode/gpt-5.4",
      "variant": "high",
    },
    "orchestrator": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "planConsultant": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "planReviewer": {
      "model": "opencode/gpt-5.4",
      "variant": "xhigh",
    },
    "planner": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "researcher": {
      "model": "opencode/gemini-3.1-pro",
    },
    "researcher-junior": {
      "model": "opencode/kimi-k2.5",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/gemini-3.1-pro",
      "variant": "high",
    },
    "deep": {
      "model": "opencode/gpt-5.4",
      "variant": "medium",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "opencode/gpt-5.4",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "visual-engineering": {
      "model": "opencode/gemini-3.1-pro",
      "variant": "high",
    },
    "writing": {
      "model": "opencode/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses OpenAI + Copilot combination 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/AndreDalwin/DrizzyAgent/dev/assets/drizzy-agent.schema.json",
  "agents": {
    "coder": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "explore": {
      "model": "github-copilot/gpt-5-mini",
    },
    "gptcoder": {
      "model": "openai/gpt-5.4",
      "variant": "medium",
    },
    "librarian": {
      "model": "github-copilot/gemini-3-flash-preview",
    },
    "multimodal-looker": {
      "model": "openai/gpt-5.4",
      "variant": "medium",
    },
    "oracle": {
      "model": "openai/gpt-5.4",
      "variant": "high",
    },
    "orchestrator": {
      "model": "github-copilot/claude-sonnet-4.6",
    },
    "planConsultant": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "planReviewer": {
      "model": "openai/gpt-5.4",
      "variant": "xhigh",
    },
    "planner": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "researcher": {
      "model": "github-copilot/gemini-3.1-pro-preview",
    },
    "researcher-junior": {
      "model": "github-copilot/claude-sonnet-4.6",
      "variant": "medium",
    },
  },
  "categories": {
    "artistry": {
      "model": "github-copilot/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "deep": {
      "model": "openai/gpt-5.4",
      "variant": "medium",
    },
    "quick": {
      "model": "github-copilot/claude-haiku-4.5",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.4",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "github-copilot/claude-sonnet-4.6",
    },
    "unspecified-low": {
      "model": "github-copilot/claude-sonnet-4.6",
    },
    "visual-engineering": {
      "model": "github-copilot/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "writing": {
      "model": "github-copilot/gemini-3-flash-preview",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses Claude + ZAI combination (librarian uses ZAI) 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/AndreDalwin/DrizzyAgent/dev/assets/drizzy-agent.schema.json",
  "agents": {
    "coder": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "explore": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "librarian": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "multimodal-looker": {
      "model": "zai-coding-plan/glm-4.6v",
    },
    "oracle": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "orchestrator": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "planConsultant": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "planReviewer": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "planner": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "researcher": {
      "model": "anthropic/claude-sonnet-4-6",
      "variant": "medium",
    },
    "researcher-junior": {
      "model": "anthropic/claude-sonnet-4-6",
      "variant": "medium",
    },
  },
  "categories": {
    "artistry": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "deep": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "unspecified-high": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "visual-engineering": {
      "model": "zai-coding-plan/glm-5",
    },
    "writing": {
      "model": "anthropic/claude-sonnet-4-6",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses Gemini + Claude combination (explore uses Gemini) 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/AndreDalwin/DrizzyAgent/dev/assets/drizzy-agent.schema.json",
  "agents": {
    "coder": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "explore": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "librarian": {
      "model": "google/gemini-3-flash-preview",
    },
    "multimodal-looker": {
      "model": "google/gemini-3-flash-preview",
    },
    "oracle": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "orchestrator": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "planConsultant": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "planReviewer": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "planner": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "researcher": {
      "model": "google/gemini-3.1-pro-preview",
    },
    "researcher-junior": {
      "model": "anthropic/claude-sonnet-4-6",
      "variant": "medium",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "deep": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "unspecified-high": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "visual-engineering": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "writing": {
      "model": "google/gemini-3-flash-preview",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses all fallback providers together 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/AndreDalwin/DrizzyAgent/dev/assets/drizzy-agent.schema.json",
  "agents": {
    "coder": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "explore": {
      "model": "opencode/claude-haiku-4-5",
    },
    "gptcoder": {
      "model": "opencode/gpt-5.4",
      "variant": "medium",
    },
    "librarian": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "multimodal-looker": {
      "model": "opencode/gpt-5.4",
      "variant": "medium",
    },
    "oracle": {
      "model": "github-copilot/gpt-5.4",
      "variant": "high",
    },
    "orchestrator": {
      "model": "github-copilot/claude-sonnet-4.6",
    },
    "planConsultant": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "planReviewer": {
      "model": "github-copilot/gpt-5.4",
      "variant": "xhigh",
    },
    "planner": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "researcher": {
      "model": "github-copilot/gemini-3.1-pro-preview",
    },
    "researcher-junior": {
      "model": "opencode/kimi-k2.5",
    },
  },
  "categories": {
    "artistry": {
      "model": "github-copilot/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "deep": {
      "model": "opencode/gpt-5.4",
      "variant": "medium",
    },
    "quick": {
      "model": "github-copilot/claude-haiku-4.5",
    },
    "ultrabrain": {
      "model": "opencode/gpt-5.4",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "github-copilot/claude-sonnet-4.6",
    },
    "unspecified-low": {
      "model": "github-copilot/claude-sonnet-4.6",
    },
    "visual-engineering": {
      "model": "github-copilot/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "writing": {
      "model": "github-copilot/gemini-3-flash-preview",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses all providers together 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/AndreDalwin/DrizzyAgent/dev/assets/drizzy-agent.schema.json",
  "agents": {
    "coder": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "explore": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "gptcoder": {
      "model": "openai/gpt-5.4",
      "variant": "medium",
    },
    "librarian": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "multimodal-looker": {
      "model": "openai/gpt-5.4",
      "variant": "medium",
    },
    "oracle": {
      "model": "openai/gpt-5.4",
      "variant": "high",
    },
    "orchestrator": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "planConsultant": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "planReviewer": {
      "model": "openai/gpt-5.4",
      "variant": "xhigh",
    },
    "planner": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "researcher": {
      "model": "google/gemini-3.1-pro-preview",
    },
    "researcher-junior": {
      "model": "opencode/kimi-k2.5",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "deep": {
      "model": "openai/gpt-5.4",
      "variant": "medium",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.4",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "visual-engineering": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "writing": {
      "model": "google/gemini-3-flash-preview",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses all providers with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/AndreDalwin/DrizzyAgent/dev/assets/drizzy-agent.schema.json",
  "agents": {
    "coder": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "explore": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "gptcoder": {
      "model": "openai/gpt-5.4",
      "variant": "medium",
    },
    "librarian": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "multimodal-looker": {
      "model": "openai/gpt-5.4",
      "variant": "medium",
    },
    "oracle": {
      "model": "openai/gpt-5.4",
      "variant": "high",
    },
    "orchestrator": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "planConsultant": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "planReviewer": {
      "model": "openai/gpt-5.4",
      "variant": "xhigh",
    },
    "planner": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "researcher": {
      "model": "google/gemini-3.1-pro-preview",
    },
    "researcher-junior": {
      "model": "opencode/kimi-k2.5",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "deep": {
      "model": "openai/gpt-5.4",
      "variant": "medium",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.4",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-6",
    },
    "visual-engineering": {
      "model": "google/gemini-3.1-pro-preview",
      "variant": "high",
    },
    "writing": {
      "model": "google/gemini-3-flash-preview",
    },
  },
}
`;
